Migrate all services to FHIR-only architecture (#343)
* feat: Implement FHIR URL path-based partitioning

## Summary
Refactored FHIR client to use URL path-based partitioning instead of header-based.
Each practice/org has its own partition: /fhir/{org-alias}/Patient

## Changes

### FhirClientService
- Replaced header-based partitioning (X-Request-Tenant-Id) with URL path partitioning
- Added client caching per partition using ConcurrentHashMap
- URL format: {baseServerUrl}/{orgAlias}/{ResourceType}
- Example: https://fhir.apps-dev.in.hinisoft.com/fhir/sunrise-family-medicine/Patient

### KeycloakJwtAuthenticationConverter
- Added extractOrganizationAlias() to get org name from JWT organization claim
- Keycloak org claim format: ["org-alias", {"org-alias": {"id": "uuid"}}]

### RequestContextInterceptor
- Updated to use extractOrganizationAlias() instead of extractOrganizationId()

### PracticeContextService
- Updated to use extractOrganizationAlias() for FHIR URL path

### application.yml
- Updated Keycloak URL to https://aran.apps-dev.in.hinisoft.com

### All FHIR Services
- Updated getClient() calls to getClient(getPracticeId())
- Removed redundant withAdditionalHeader() calls

## Testing
- Verified with michael.chen user from sunrise-family-medicine org
- Token scope must include 'organization' for org claim
- Successfully retrieved patients from correct FHIR partition

* Migrate all services to FHIR-only architecture

- Migrate portal services to FHIR:
  - PortalApprovalService (Person resource)
  - PortalAuthService (Person resource)
  - PortalDemographicsService (Basic resource)
  - PortalPatientService (Person resource)
  - PortalReviewService (Basic resource)
  - PortalProfileService (Basic resource)
  - PortalVitalsService (delegates to VitalsService)

- Update controllers for FHIR compatibility:
  - PortalDemographicsController
  - PortalAuthController
  - CreditCardController (String IDs)
  - DateTimeFinalizedController (String IDs)
  - MaintenanceContro